fix wrong sizing for block buttons on mobile devices

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -111,7 +111,7 @@ h1 small .label {
 	margin-top: -1px;
 }
 
-@media (max-width: @screen-xs-min) { 
+@media (max-width: @screen-xs-max) { 
     .nav-tabs > li {
         float: none;
     }
